# AndroidGameModify

./: 4字节hex转换为四字节long.md  AndroidKiller问题.md  GG修改器教程.md  IDA 分析c++虚表的插件.docx  IDA使用技巧.md  OlliDebug中的各类断点.md  README.md  classy.txt  float double类型,在内存中的存储方式.md  gdb动态调试android可执行程序.docx  gikdbg.md  ptrace自己的问题.md  so 编译时增加反编译难度.md  xhook.md  内存搜索的一点思考.txt  反调试.md  手写的jni函数.md  搜索到的数据存储 target_memory_info_array.md  理解elf文件的got和plt.txt  识别c++ RTTI的ida脚本.docx  还原使用IL2CPP编译的unity游戏的symbol.md  逆向元气骑士 无敌.md
64inlineHook/: inline Hook中使用到的汇编指令.md
IDA/: IDA实用技巧.txt  ida+frida+python script trace函数.txt
LibInject/: readme.md
PrintCallstack/: readme.md
andorid刷机/: 6p 刷Android官方固件 报错Snapshot cancel FAILED.txt  ARM_DBG_READ.txt  branch和tag.txt  nexus 6 5.1 lmy47D如何查看内核版本.txt  nexus 6 6p使用的cpu.txt  下载内核和编译器.txt  使用vpn下载安卓系统源代码.txt  刷机手机和系统对应关系.txt  屠龙刀.txt  支持硬件断点思路.txt  构建内核官方文档.txt  链接.txt
arm汇编/: ARM汇编基础教程.docx  arm_hello.txt  gef命令.txt
bytedanceInlinehook/: buildShadowhookNinja.bat  readme.md
bytedanceInlinehook/gtavc/: CMakeLists.txt  buildByMake.bat  buildByNinja.bat
dlsymDemo/: NativeUtils.java  说明.md
frida/: 22 hook.py  22 枚举导入导出表.js  23 hookExportFun.py  24 hookModifyArgReturn.py  27 hookUnExportFun.py  28 hookPointerReturn.py  29 hookDlopenAndroid_dlopen_ext.py  30 hookMem.py  31 hookJniFun.py  32 hookJniFunByAddr.py  33 hookLibart.py  34 hookBacktrace.py  35 hookNativeFunction.py  36 hookFileIO.py  env.bat  on_message中输出错误信息.txt  open.py  openReplace.py  openReplacePro.py  readme.md
jni中本地方法的注册流程/: readme.md  testdlsym.py
knight-crack-wudi/: readme.md  (+6 more)
(+293 files in other folders)
